myContributionsToInfrastructure/c368-team03-prod/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: orderbook
  name: orderbookdb
  namespace: c368-team03-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      name: orderbookdb
  template:
    metadata:
      labels:
        name: orderbookdb
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: wiley123
        image: "108174090253.dkr.ecr.us-east-1.amazonaws.com/production-support-course:c368team03db-prod-18" # {"$imagepolicy": "flux-system:c368team03proddb"}
        name: orderbookdb
        imagePullPolicy: Always
        ports:
        - name: mysql
          containerPort: 3306
        resources:
          limits:
            cpu: 200m
            memory: 768Mi
          requests:
            cpu: 75m
            memory: 512Mi
      restartPolicy: Always
