myContributionsToInfrastructure/c368-team03-prod/deployment-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: orderbook
  name: orderbookfe
  namespace: c368-team03-prod
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: orderbookfe
  template:
    metadata:
      labels:
        name: orderbookfe
    spec:
      containers:
      - env:
        - name: uri
          value: c368team03prod-api.computerlab.online
        image: "108174090253.dkr.ecr.us-east-1.amazonaws.com/production-support-course:c368team03fe-prod-18" # {"$imagepolicy": "flux-system:c368team03prodfe"}
        name: orderbookfe
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /stub_status
            port: 80
          initialDelaySeconds: 240
          periodSeconds: 60
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /stub_status
            port: 80
          timeoutSeconds: 60
          periodSeconds: 60
          initialDelaySeconds: 240
          successThreshold: 1
          failureThreshold: 3
      restartPolicy: Always
