myContributionsToInfrastructure/c368-team03-prod/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: orderbook
    app.kubernetes.io/component: orderbookapi
    app.kubernetes.io/name: orderbook
  name: orderbookapi
  namespace: c368-team03-prod
spec:
  ports:
  - name: "api"
    port: 8000
    targetPort: 8000
  selector:
    name: orderbookapi
status:
  loadBalancer: {}
