myContributionsToInfrastructure/c368-team03-prod/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: orderbook
  name: orderbookdb
  namespace: c368-team03-prod
spec:
  ports:
  - name: "mysql"
    port: 3306
    targetPort: 3306
  selector:
    name: orderbookdb
status:
  loadBalancer: {}
