myContributionsToInfrastructure/c368-team03-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orderbook
  namespace: c368-team03-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - c368team03prod-api.computerlab.online
    - c368team03prod.computerlab.online
    secretName: c500team01tls-secret
  rules:
  - host: c368team03prod.computerlab.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orderbookfe
            port:
              number: 80
              
  - host: c368team03prod-api.computerlab.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orderbookapi
            port:
              number: 8000
